--- a/mobile web project/assets/css/style.css
+++ b/mobile web project/assets/css/style.css
@@ -1,208 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-body {
-  margin: 0;
-  padding: 0;
-  background: 
-    radial-gradient(
-     at center, #FDB931, #4e1f5dff);
 
-}
-
-.wrapper{
-        margin: 50px auto;
-        width: 900px;
-        height: 500px;
-        display: flex;
-        flex-direction:row;
-        background: radial-gradient(ellipse farthest-corner at right bottom, #fdd832 0%, #f7b42f 10%, 
-        #9c7625 30.75%, #80672c 40%, transparent 80%),radial-gradient(ellipse farthest-corner at left top,
-        #ffffff 0%, #f8f8a6 7.54%, #d8b965 25%, #5d4a1f 62.5%, #5c491d 100%);
-    }
-
-.wrapper .text-overlay {
-  position: absolute;
-  z-index: 500;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: stretch;
-          align-items: stretch;
-}
-.wrapper .text-overlay .header {
-  width: calc(900px - 20px);
-  padding: 5px 10px;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-          align-items: center;
-  color: white;
-}
-.wrapper .text-overlay .header #logo {
-  font-size: 14px;
-  font-family: 'Lora', serif;
-  letter-spacing: 0.5em;
-  color: black;
-  border: 2px solid black;
-  padding: 5px 2px 5px 10px;
-  margin-left: 10px;
-}
-.wrapper .text-overlay .header #nav-menu {
-  width: 200px;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-          flex-direction: row;
-  -webkit-box-pack: center;
-          justify-content: center;
-  overflow: hidden;
-  visibility: hidden;
-  -webkit-box-flex: 0.6;
-          flex: 0.6;
-  opacity: 0;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-.wrapper .text-overlay .header #nav-menu .nav-link {
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 18px;
-  font-family: 'Lora', serif;
-  font-weight: bold;
-  color: #ffffff;
-  margin-left: 30px;
-  margin-right: 30px;
-}
-.wrapper .text-overlay .header #nav-menu .nav-link:hover {
-  text-decoration: underline;
-  color: white;
-}
-.wrapper .text-overlay .header .fa-search {
-  position: relative;
-  left: 70px;
-}
-.wrapper .text-overlay .header .fa-bars {
-  cursor: pointer;
-  color: white;
-}
-.wrapper .text-overlay .main-content {
-  padding: 0 10px;
-  font-family: 'Lora', serif;
-  margin-left: 10px;
-  overflow: hidden;
-}
-.wrapper .text-overlay .main-content #main-header {
-  margin-bottom: 0px;
-  text-transform: uppercase;
-  font-size: 100px;
-  color: white;
-  font-weight: bold;
-  letter-spacing: 0.2em;
-  position: relative;
-  top: 180px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-.wrapper .text-overlay .main-content #sub-heading {
-  font-size: 32px;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  color: white;
-  margin-top: 0;
-  position: relative;
-  top: 70px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-.wrapper .container1,
-.wrapper .container2,
-.wrapper .container3 {
-  overflow: hidden;
-  position: relative;
-  z-index: 2;
-}
-.wrapper .container1 .image,
-.wrapper .container2 .image,
-.wrapper .container3 .image {
-  width: 100%;
-}
-.wrapper .container1 {
-  -webkit-box-flex: 1;
-          flex: 1;
-}
-.wrapper .container2 {
-  -webkit-box-flex: 1.3;
-          flex: 1.3;
-  overflow: hidden;
-}
-.wrapper .container2 .image {
-  position: relative;
-  left: 450px;
-  -webkit-transition: left 0.5s ease-out;
-  transition: left 0.5s ease-out;
-}
-.wrapper .container3 {
-  -webkit-box-flex: 0.9;
-          flex: 0.9;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-}
-.wrapper .container3 .container4 {
-  -webkit-box-flex: 0.7;
-          flex: 0.7;
-}
-.wrapper .container3 .container4 .image {
-  height: 100%;
-  position: relative;
-  left: 260px;
-  -webkit-transition: left 0.5s ease-out;
-  transition: left 0.5s ease-out;
-}
-.wrapper .container3 .container5 {
-  height: 100%;
-
-  background-color: purple;
-  -webkit-box-flex: 0.3;
-          flex: 0.3;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-          align-items: center;
-  font-size: 20px;
-  font-family: 'Lora', serif;
-  text-transform: uppercase;
-  position: relative;
-  left: 260px;
-  -webkit-transition: left 0.5s ease-out;
-  transition: left 0.5s ease-out;
-}
-.wrapper .container3 .container5 .text-container {
-  overflow: hidden;
-}
-.wrapper .container3 .container5 .text-container .heading {
-  padding: 0;
-  margin: 0 0 0 40px;
-  position: relative;
-  top: 45px;
-  letter-spacing: 0.2em;
-  -webkit-transition: top 0.6s ease-in;
-  transition: top 0.6s ease-in;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');body{margin:0;padding:0;background:radial-gradient(at center,#fdb931,#4e1f5dff)}.wrapper{margin:50px auto;width:900px;height:500px;display:flex;flex-direction:row;background:radial-gradient(ellipse farthest-corner at right bottom,#fdd832 0,#f7b42f 10%,#9c7625 30.75%,#80672c 40%,transparent 80%),radial-gradient(ellipse farthest-corner at left top,#fff 0,#f8f8a6 7.54%,#d8b965 25%,#5d4a1f 62.5%,#5c491d 100%)}.wrapper .text-overlay{position:absolute;z-index:500;display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;-webkit-box-pack:start;justify-content:flex-start;-webkit-box-align:stretch;align-items:stretch}.wrapper .text-overlay .header{width:calc(900px - 20px);padding:5px 10px;display:-webkit-box;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;-webkit-box-pack:justify;justify-content:space-between;-webkit-box-align:center;align-items:center;color:white}.wrapper .text-overlay .header #logo{font-size:14px;font-family:'Lora',serif;letter-spacing:.5em;color:black;border:2px solid black;padding:5px 2px 5px 10px;margin-left:10px}.wrapper .text-overlay .header #nav-menu{width:200px;display:-webkit-box;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;-webkit-box-pack:center;justify-content:center;overflow:hidden;visibility:hidden;-webkit-box-flex:.6;flex:.6;opacity:0;-webkit-transition:all .2s ease-in;transition:all .2s ease-in}.wrapper .text-overlay .header #nav-menu .nav-link{text-transform:uppercase;text-decoration:none;font-size:18px;font-family:'Lora',serif;font-weight:bold;color:#fff;margin-left:30px;margin-right:30px}.wrapper .text-overlay .header #nav-menu .nav-link:hover{text-decoration:underline;color:white}.wrapper .text-overlay .header .fa-search{position:relative;left:70px}.wrapper .text-overlay .header .fa-bars{cursor:pointer;color:white}.wrapper .text-overlay .main-content{padding:0 10px;font-family:'Lora',serif;margin-left:10px;overflow:hidden}.wrapper .text-overlay .main-content #main-header{margin-bottom:0;text-transform:uppercase;font-size:100px;color:white;font-weight:bold;letter-spacing:.2em;position:relative;top:180px;-webkit-transition:all .5s ease-in-out;transition:all .5s ease-in-out}.wrapper .text-overlay .main-content #sub-heading{font-size:32px;letter-spacing:.1em;text-transform:uppercase;color:white;margin-top:0;position:relative;top:70px;-webkit-transition:all .5s ease-in-out;transition:all .5s ease-in-out}.wrapper .container1,.wrapper .container2,.wrapper .container3{overflow:hidden;position:relative;z-index:2}.wrapper .container1 .image,.wrapper .container2 .image,.wrapper .container3 .image{width:100%}.wrapper .container1{-webkit-box-flex:1;flex:1}.wrapper .container2{-webkit-box-flex:1.3;flex:1.3;overflow:hidden}.wrapper .container2 .image{position:relative;left:450px;-webkit-transition:left .5s ease-out;transition:left .5s ease-out}.wrapper .container3{-webkit-box-flex:.9;flex:.9;display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column}.wrapper .container3 .container4{-webkit-box-flex:.7;flex:.7}.wrapper .container3 .container4 .image{height:100%;position:relative;left:260px;-webkit-transition:left .5s ease-out;transition:left .5s ease-out}.wrapper .container3 .container5{height:100%;background-color:purple;-webkit-box-flex:.3;flex:.3;display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;-webkit-box-pack:center;justify-content:center;-webkit-box-align:center;align-items:center;font-size:20px;font-family:'Lora',serif;text-transform:uppercase;position:relative;left:260px;-webkit-transition:left .5s ease-out;transition:left .5s ease-out}.wrapper .container3 .container5 .text-container{overflow:hidden}.wrapper .container3 .container5 .text-container .heading{padding:0;margin:0 0 0 40px;position:relative;top:45px;letter-spacing:.2em;-webkit-transition:top .6s ease-in;transition:top .6s ease-in}
 
